--- a/morda.css
+++ b/morda.css
@@ -70,7 +70,6 @@ body {
 .masthead-brand {
   margin-top: 20px;
 }
-
 .masthead-nav > li {
   display: inline-block;
 }
@@ -179,4 +178,32 @@ a.fork-me i {
 
 .mailing-list {
   margin-top: 30px;
+}
+.form-inline .form-control {
+    display: inline-block;
+    vertical-align: middle;
+    width: auto;
+}
+.form-inline .form-group {
+    display: inline-block;
+    margin-bottom: 0;
+    vertical-align: middle;
+}
+div.inner, #bird img {
+  z-index: 3;
+  position: relative;
+}
+#bird:hover #bg {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  background-color: #fda9a9;
+  -webkit-transition: background-color 300ms linear;
+  -moz-transition: background-color 300ms linear;
+  -o-transition: background-color 300ms linear;
+  -ms-transition: background-color 300ms linear;
+  transition: background-color 300ms linear;
 }
